# poetry-delta

./: Dockerfile  README.md  delta.py  pyproject.toml
.github/workflows/: testing.yaml
delta/: run.py
delta/cli/: base.py
delta/process/: backup.py  commit_compare.py  compare.py  local.py  local_compare.py  repo.py  state.py
scripts/: build  run
